log in and registration added

--- a/login.html
+++ b/login.html
@@ -20,6 +20,16 @@
 		</header>
 		<main>
 			<div class="f1"> 
+				<form>
+					<div>
+						<label>User name: </label>
+						<input type="text" name="user">
+					</div>
+					<div>
+						<label>Password: </label>
+						<input type="password" name="password">
+						</div>
+				</form>
 			</div>
 		</main>
 			
