--- a/register.html
+++ b/register.html
@@ -20,8 +20,23 @@
 		</header>
 		<main>
 				<div class="f1"> 
+					<form>
+						<div>
+							<label>Email address: </label>
+							<input type="text" name="email">
+						</div>
+						<div>
+							<label>Password: </label>
+							<input type="password" name="password">
+						</div>
+						<div>
+							<label>Confirm Password: </label>
+							<input type="password" name="confirmPassword">
+						</div>
+					</form>
 				</div>
-		</main>
+			</main>
+				
 			
 		
 		<footer>
