buttons added to log in and register

--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<img class="g-img" src="assets/logo.PNG"> 
+				<img class="g-img" src="assets/logo.png"> 
 				<nav class="topnav">
 					<a class="g-c1" href="index.html">HOME</a>
 					<a class="g-c2" href="contribute.html">CONTRIBUTE</a>
@@ -33,6 +33,7 @@
 							<label>Confirm Password: </label>
 							<input type="password" name="confirmPassword">
 						</div>
+						<button class="button" >Register</button>
 					</form>
 				</div>
 			</main>
