--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<img class="g-img" src="assets/logo.PNG"> 
+				<img class="g-img" src="assets/logo.png"> 
 				<nav class="topnav">
 					<a class="g-c1" href="index.html">HOME</a>
 					<a class="g-c2" href="contribute.html">CONTRIBUTE</a>
@@ -28,7 +28,8 @@
 					<div>
 						<label>Password: </label>
 						<input type="password" name="password">
-						</div>
+					</div>
+					<button class="button" >Log in</button>
 				</form>
 			</div>
 		</main>
