login class added. Nav links fixed

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<div class="container">
 				<img class="g-img" src="assets/logo.png"> 
 				<nav class="topnav">
-					<a class="g-c1 flex-item active" href="#">HOME</a>
+					<a class="g-c1 flex-item active" href="index.html">HOME</a>
 					<a class="g-c2 flex-item" href="contribute.html">CONTRIBUTE</a>
-					<a class="g-c3 flex-item" href="login.html">LOG IN</a>
-					<a class="g-c4 flex-item" href="register.html">REGISTER</a>
+					<a class="g-c3 flex-item login" href="login.html">LOG IN</a>
+					<a class="g-c4 flex-item login" href="register.html">REGISTER</a>
 				</nav>
 			</div>
 		</header>
