--- a/register.html
+++ b/register.html
@@ -13,8 +13,8 @@
 				<nav class="topnav">
 					<a class="g-c1" href="index.html">HOME</a>
 					<a class="g-c2" href="contribute.html">CONTRIBUTE</a>
-					<a class="g-c3" href="login.html">LOG IN</a>
-					<a class="g-c4 active" href="#">REGISTER</a>
+					<a class="g-c3 login" href="login.html">LOG IN</a>
+					<a class="g-c4 active login" href="register.html">REGISTER</a>
 				</nav>
 			</div>
 		</header>
@@ -39,7 +39,7 @@
 			</main>
 				
 			
-			
+
 		
 		<footer>
 			<span>&copy; Native Aid 2019</span>
