--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
 				<nav class="topnav">
 					<a class="g-c1" href="index.html">HOME</a>
 					<a class="g-c2" href="contribute.html">CONTRIBUTE</a>
-					<a class="g-c3 active" href="#">LOG IN</a>
-					<a class="g-c4" href="register.html">REGISTER</a>
+					<a class="g-c3 active login" href="login.html">LOG IN</a>
+					<a class="g-c4 login" href="register.html">REGISTER</a>
 				</nav>
 			</div>
 		</header>
@@ -35,7 +35,7 @@
 		</main>
 			
 		
-		
+
 		<footer>
 				<span>&copy; Native Aid 2019</span>
 		</footer>
