logout php links added

--- a/contribute.html
+++ b/contribute.html
@@ -9,12 +9,13 @@
 	<body>
 		<header>
 			<div class="container">
-				<img class="g-img" src="assets/logo.PNG"> 
+				<img class="g-img" src="assets/logo.png"> 
 				<nav class="topnav">
 						<a class="g-c1" href="index.html">HOME</a>
-						<a class="g-c2 active" href="#">CONTRIBUTE</a>
-						<a class="g-c3" href="login.html">LOG IN</a>
-						<a class="g-c4" href="register.html">REGISTER</a>
+						<a class="g-c2 active" href="contribute.html">CONTRIBUTE</a>
+						<a class="g-c3 login" href="login.html">LOG IN</a>
+						<a class="g-c4 login" href="register.html">REGISTER</a>
+						<a class="hide" href="logout.php">LOG OUT</a>
 				</nav>
 			</div> 
 		</header>
@@ -24,6 +25,7 @@
 		</main>
 			
 		
+
 		<footer>
 			<span>&copy; Native Aid 2019</span>
 		</footer>
