--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<a class="g-c2 flex-item" href="contribute.html">CONTRIBUTE</a>
 					<a class="g-c3 flex-item login" href="login.html">LOG IN</a>
 					<a class="g-c4 flex-item login" href="register.html">REGISTER</a>
+					<a class="hide" href="logout.php">LOG OUT</a>
 				</nav>
 			</div>
 		</header>
