--- a/login.html
+++ b/login.html
@@ -15,12 +15,13 @@
 					<a class="g-c2" href="contribute.html">CONTRIBUTE</a>
 					<a class="g-c3 active login" href="login.html">LOG IN</a>
 					<a class="g-c4 login" href="register.html">REGISTER</a>
+					<a class="hide" href="logout.php">LOG OUT</a>
 				</nav>
 			</div>
 		</header>
 		<main>
 			<div class="f1"> 
-				<form>
+				<form action="login.php">
 					<div>
 						<label>User name: </label>
 						<input type="text" name="user">
