--- a/register.html
+++ b/register.html
@@ -15,6 +15,7 @@
 					<a class="g-c2" href="contribute.html">CONTRIBUTE</a>
 					<a class="g-c3 login" href="login.html">LOG IN</a>
 					<a class="g-c4 active login" href="register.html">REGISTER</a>
+					<a class="hide" href="logout.php">LOG OUT</a>
 				</nav>
 			</div>
 		</header>
